# calorie_calculator_cpp

./: .gitignore  CMakeLists.txt  README.md  build.py  calorie_calculator.cpp  compile.bat  compile_cyc.bat  compile_run.bat  cycling_calculator.cpp  cycling_data.h  run_py.sh  running_calculator.cpp  running_data.h
bpm_graph_parser/: config.py  graph_parser.py  main.py
calorie_engine/: CMakeLists.txt  run_build_py.sh
calorie_engine/src/: main_cli.cpp
calorie_engine/src/app/: Application.cpp  Application.h
calorie_engine/src/cli/: CliHandler.cpp  CliHandler.h  CliPrinter.cpp  CliPrinter.h
calorie_engine/src/common/: version.h
calorie_engine/src/config/: food_data.json  output_config.json
calorie_engine/src/core/: CalculationEngine.cpp  FoodConverter.cpp  FoodConverter.h  FoodDataManager.cpp  OutputConfigManager.cpp  OutputConfigManager.h
calorie_engine/src/core/kinematics/: PaceCalculator.cpp
calorie_engine/src/core/math/: Interpolator.cpp
calorie_engine/src/core/physiology/: MetCalorieCalculator.h
calorie_engine/src/db_inserter/: DatabaseManager.cpp  DatabaseManager.h  DbInserterFacade.cpp  DbInserterFacade.h  JsonImporter.cpp  JsonImporter.h
calorie_engine/src/domain/: FoodEquivalent.h
calorie_engine/src/ui/: OutputFormat.cpp  OutputFormat.h
calorie_engine/src/utils/: FileFinder.cpp  FileFinder.h
ocr/: config.py  data_saver.py  main.py  ocr_extractor.py
python_tools/bpm_graph_parser/: config.py  graph_parser.py  main.py  slope_analyzer.py  stats_calculator.py
python_tools/ocr/: config.py  data_saver.py  image_processor.py  main.py  ocr_extractor.py
src/: Application.cpp  Application.h  CalculationEngine.cpp  CalculationEngine.h  ConsoleUI.cpp  ConsoleUI.h  DataPoint.h  WorkoutCalculator.cpp  WorkoutCalculator.h  cycling_data.h  food_data.h  main.cpp  main_cli.cpp  pch.h  running_data.h
src/app/: Application.cpp  Application.h
src/common/: pch.h  version.h
src/core/: CalculationEngine.cpp  CalculationEngine.h  FoodConverter.cpp  FoodConverter.h  FoodDataManager.h
src/core/kinematics/: PaceCalculator.cpp  PaceCalculator.h
src/core/math/: Interpolator.cpp  Interpolator.h
src/core/physiology/: MetCalorieCalculator.cpp  MetCalorieCalculator.h
src/data/: cycling_data.h  food_data.h  running_data.h
src/domain/: WorkoutDomain.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h
